Objetos de cocina

--- a/objetos.html
+++ b/objetos.html
@@ -12,5 +12,11 @@
       <li>Computadora</li>
       <li>Teclado</li>
     </ul>
+
+    <ul>
+      <li>Tenedores</li>
+      <li>Platos</li>
+      <li>Vasos</li>
+    </ul>
   </body>
 </html>
