objetos de oficina

--- a/objetos.html
+++ b/objetos.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h2>Objetos de oficina</h2>
+      <br>
     <ul>
       <li>Libreta</li>
       <li>Lapiz</li>
