--- a/objetos.html
+++ b/objetos.html
@@ -12,5 +12,11 @@
       <li>Computadora</li>
       <li>Teclado</li>
     </ul>
+
+    <ul>
+      <li>olla</li>
+      <li>sarten</li>
+      <li>espatula</li>
+    </ul>
   </body>
 </html>
